# mathicgb

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac
.github/workflows/: build.yml
doc/: description.txt  mgb.1
src/: CMakeLists.txt  mathicgb.cpp  mathicgb.h
src/cli/: CommonParams.cpp  CommonParams.hpp  GBAction.cpp  GBMain.cpp  HelpAction.cpp  MatrixAction.cpp  SigGBAction.cpp  VersionAction.cpp  VersionAction.hpp
src/mathicgb/: F4MatrixBuilder.cpp  F4MatrixBuilder.hpp  F4MatrixBuilder2.cpp  F4MatrixReducer.cpp  F4Reducer.cpp  FixedSizeMonomialMap.h  LogDomain.cpp  LogDomainSet.cpp  LogDomainSet.hpp  MathicIO.hpp  ModuleMonoSet.cpp  MonoMonoid.hpp  MonoOrder.hpp  MonoProcessor.hpp  MonomialMap.hpp  PolyBasis.cpp  PolyBasis.hpp  PrimeField.hpp  QuadMatrix.cpp  Range.hpp  RawVector.hpp  SPairs.cpp  SigSPairQueue.cpp  SparseMatrix.cpp  StaticMonoMap.hpp  TypicalReducer.cpp  mtbb.hpp  stdinc.h
src/test/: F4MatrixBuilder.cpp  MathicIO.cpp  QuadMatrixBuilder.cpp  Range.cpp  gb-test.cpp  gtestInclude.cpp  poly-test.cpp
